✨ Mejoras SEO, routing /admin, y optimización del menú
- Simplificado menú de navegación (Inicio, Servicios, Contacto)
- Removido botón admin del header público
- Agregado routing /admin para acceso administrativo
- Actualizado título: HHBC Consulting Group, Chile
- Implementado SEO completo con meta tags
- Creado sitemap.xml y robots.txt
- Agregados datos estructurados Schema.org
- Corregidos imports circulares en backend
- Inicializada base de datos SQLite
- Configuración nginx para SPA routing

--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
+<!DOCTYPE html>
+<html lang="es">
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Sitio Web Profesional de Consultoría</title>
-    </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
-    </body>
-  </html>
-  
+  <!-- Primary Meta Tags -->
+  <title>HHBC Consulting Group, Chile - Consultoría Legal, TI y Contable</title>
+  <meta name="title" content="HHBC Consulting Group, Chile - Consultoría Legal, TI y Contable" />
+  <meta name="description"
+    content="HHBC Consulting Group ofrece servicios profesionales de consultoría legal, tecnología de la información y contabilidad en Chile. Soluciones empresariales integrales con más de 10 años de experiencia." />
+  <meta name="keywords"
+    content="consultoría, Chile, legal, TI, contabilidad, asesoría empresarial, HHBC, transformación digital, auditoría" />
+  <meta name="author" content="HHBC Consulting Group" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="Spanish" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://hhbcconsulting.cl/" />
+  <meta property="og:title" content="HHBC Consulting Group, Chile" />
+  <meta property="og:description" content="Servicios profesionales de consultoría legal, TI y contabilidad en Chile" />
+  <meta property="og:image" content="/logo-hhbc.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://hhbcconsulting.cl/" />
+  <meta property="twitter:title" content="HHBC Consulting Group, Chile" />
+  <meta property="twitter:description"
+    content="Servicios profesionales de consultoría legal, TI y contabilidad en Chile" />
+  <meta property="twitter:image" content="/logo-hhbc.png" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://hhbcconsulting.cl/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/logo-hhbc.png" />
+
+  <!-- Sitemap -->
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
+</html>
